--- a/quick-start/overlays/uat/kustomization.yaml
+++ b/quick-start/overlays/uat/kustomization.yaml
@@ -1,8 +1,5 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
-namespace: quick-start-uat
-resources:
-- quick-start.yaml
-- service.yaml
-- route.yaml
+bases:
+- ../../base
 
+patches:
+- replicas.yaml
