--- a/quick-start/overlays/test/kustomization.yaml
+++ b/quick-start/overlays/test/kustomization.yaml
@@ -1,14 +1,5 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
-namespace: quick-start-test
-resources:
-- quick-start.yaml
-- service.yaml
-- route.yaml
-- servicemonitor.yaml
-commonLabels:
-  app: quick-start
-images:
-- name: quay.io/mcombi/quarkus-getting-started
-  newName: quay.io/mcombi/quarkus-getting-started
-  newTag: 4a161ec361f0322da841a67fe20be980a528d722
+bases:
+- ../../base
+
+patches:
+- replicas.yaml
