--- a/quick-start/overlays/uat/servicemonitor.yaml
+++ b/quick-start/overlays/uat/servicemonitor.yaml
@@ -5,4 +5,4 @@ kind: ServiceMonitor
     app-with-metrics: quick-start
     k8s-app: quick-start
   name: quick-start
-  namespace: quick-start-test
+  namespace: quick-start-uat
