--- a/quick-start-app/base/route.yaml
+++ b/quick-start-app/base/route.yaml
@@ -1,6 +1,7 @@
 apiVersion: route.openshift.io/v1
 kind: Route
 ***REMOVED***
+  name: quick-start-route
 ***REMOVED***
     app: quick-start
     app.kubernetes.io/instance: quick-start
