--- a/quick-start-app/overlays/test/replicas.yaml
+++ b/quick-start-app/overlays/test/replicas.yaml
@@ -12,3 +12,7 @@ spec:
   selector:
     matchLabels:
       app: quick-start
+  template:
+    ***REMOVED***
+    ***REMOVED***
+        app: quick-start
