--- a/quick-start-app/overlays/uat/replicas.yaml
+++ b/quick-start-app/overlays/uat/replicas.yaml
@@ -11,3 +11,7 @@ spec:
   selector:
     matchLabels:
       app: quick-start
+  template:
+    ***REMOVED***
+    ***REMOVED***
+        app: quick-start
