--- a/quick-start-app/overlays/uat/replicas.yaml
+++ b/quick-start-app/overlays/uat/replicas.yaml
@@ -15,3 +15,12 @@ spec:
     ***REMOVED***
     ***REMOVED***
         app: quick-start
+        version: v1
+    spec:
+      containers:
+        - name: quarkus-getting-started
+          image: quay.io/mcombi/quarkus-getting-started:latest
+          ports:
+            - containerPort: 8080
+              protocol: TCP
+              name: tpc-port
