--- a/quick-start-app/overlays/test/kustomization.yaml
+++ b/quick-start-app/overlays/test/kustomization.yaml
@@ -1,7 +1,8 @@
 bases:
 - ../../base
-
-patches:
-- patch-deployment.yaml
+namespace: quick-start-test
+#amePrefix: quick-start-test
+patchesStrategicMerge:
+  - patch-deployment.yaml
 
 #- servicemonitor.yaml
