--- a/tekton/overlays/sealed-secrets/kustomization.yaml
+++ b/tekton/overlays/sealed-secrets/kustomization.yaml
@@ -1,8 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: demo-tekton-build-env
-resources:
+bases:
   - ../../base/
+patchesStrategicMerge:
   - github-secret-sealed.yaml
 
 
