--- a/quick-start-app/base/quick-start.yaml
+++ b/quick-start-app/base/quick-start.yaml
@@ -25,4 +25,23 @@ spec:
             - containerPort: 8080
               protocol: TCP
               name: tpc-port
+          readinessProbe:
+            httpGet:
+              path: /q/health
+              port: 8080
+              scheme: HTTP
+            timeoutSeconds: 1
+            periodSeconds: 10
+            successThreshold: 1
+            failureThreshold: 3
+          livenessProbe:
+            httpGet:
+              path: /q/health/
+              port: 8080
+              scheme: HTTP
+            timeoutSeconds: 1
+            periodSeconds: 10
+            successThreshold: 1
+            failureThreshold: 3
+
 
