--- a/tekton/base/triggers/trigger-template.yaml
+++ b/tekton/base/triggers/trigger-template.yaml
@@ -1,4 +1,4 @@
-apiVersion: triggers.tekton.dev/v1beta1
+apiVersion: triggers.tekton.dev/v1alpha1
 kind: TriggerTemplate
 ***REMOVED***
   name: quick-start
