--- a/tekton/base/triggers/trigger-template.yaml
+++ b/tekton/base/triggers/trigger-template.yaml
@@ -21,9 +21,9 @@ spec:
         generateName: build-deploy-$(tt.params.git-repo-name)-
       spec:
         #serviceAccountName: pipeline
-        serviceAccountNames:
-          - taskName: git-update-deployment-test
-            serviceAccountName: github-service-account
+        #serviceAccountNames:
+        #  - taskName: git-update-deployment-test
+        #    serviceAccountName: github-service-account
 
         pipelineRef:
           name: quick-start-pipeline-test
