--- a/quick-start-app-application-set/clusterset.yaml
+++ b/quick-start-app-application-set/clusterset.yaml
@@ -33,7 +33,7 @@ spec:
 ---
 
 
-apiVersion: apps.open-cluster-management.io/v1alpha1
+apiVersion: apps.open-cluster-management.io/v1beta1
 kind: GitOpsCluster
 ***REMOVED***
   name: argo-acm-clusters
@@ -44,6 +44,6 @@ spec:
     argoNamespace: openshift-gitops
   placementRef:
     kind: Placement
-    apiVersion: cluster.open-cluster-management.io/v1alpha1
+    apiVersion: cluster.open-cluster-management.io/v1beta1
     name: all-openshift-clusters
     namespace: openshift-gitops
