--- a/quick-start-app-helm/quick-start-app/values.yaml
+++ b/quick-start-app-helm/quick-start-app/values.yaml
@@ -5,10 +5,10 @@
 replicaCount: 1
 
 image:
-  repository: quay.io/mcombi/quarkus-getting-started:latest
+  repository: quay.io/mcombi/quarkus-getting-started
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "latest"
 
 imagePullSecrets: []
 nameOverride: ""
