--- a/quick-start-app-helm/quick-start-app/values.yaml
+++ b/quick-start-app-helm/quick-start-app/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: quay.io/mcombi/quarkus-getting-started
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "latest"
+  tag: "4a161ec361f0322da841a67fe20be980a528d722"
 
 imagePullSecrets: []
 nameOverride: ""
