labels in route

--- a/quick-start-app-helm/quick-start-app/templates/route.yaml
+++ b/quick-start-app-helm/quick-start-app/templates/route.yaml
@@ -3,6 +3,7 @@ kind: Route
 metadata:
   name: quick-start-route
   labels:
+   {{- include "quick-start-app.labels" . | nindent 4 }}
     app: quick-start
     app.kubernetes.io/instance: quick-start
 spec:
