--- a/tekton/acm/acm-manifest.yaml
+++ b/tekton/acm/acm-manifest.yaml
@@ -1,48 +1,57 @@
 apiVersion: app.k8s.io/v1beta1
 kind: Application
 ***REMOVED***
-***REMOVED***
-    apps.open-cluster-management.io/deployables: ''
   name: demo-tekton-build-env
 ***REMOVED***
 spec:
   componentKinds:
-    - group: apps.open-cluster-management.io
-      kind: Subscription
+  - group: apps.open-cluster-management.io
+    kind: Subscription
   descriptor: {}
   selector:
     matchExpressions:
       - key: app
         operator: In
-        values:
+        values: 
           - demo-tekton-build-env
+---
+***REMOVED***
+kind: Namespace
+***REMOVED***
+  name: ggithubcom-mcombi-my-quarkus-quick-start-config-ns
+---
+apiVersion: apps.open-cluster-management.io/v1
+kind: Channel
+***REMOVED***
+***REMOVED***
+    apps.open-cluster-management.io/reconcile-rate: high
+  name: ggithubcom-mcombi-my-quarkus-quick-start-config
+  namespace: ggithubcom-mcombi-my-quarkus-quick-start-config-ns
+spec:
+  type: Git
+  pathname: 'https://github.com/mcombi/my-quarkus-quick-start-config'
 ---
 apiVersion: apps.open-cluster-management.io/v1
 kind: Subscription
 ***REMOVED***
 ***REMOVED***
-    apps.open-cluster-management.io/deployables: 'demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-my-gp2-immediate-storageclass,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-quick-start-pipeline-promote-pipeline,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-git-update-deployment-test-task,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-git-promote-deployment-task,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-github-secret-secret,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-source-pvc-persistentvolumeclaim,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-github-service-account-serviceaccount,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-quick-start-pipeline-test-pipeline,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-quick-start-eventlistener,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-quick-start-triggerbinding,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-el-quick-start-route,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-quick-start-triggertemplate,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-quay-credentials-secret,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-basic-user-pass-secret,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-s2i-java-11-custom-task,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-git-update-deployment-task,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-quick-start-trigger-trigger'
     apps.open-cluster-management.io/git-branch: main
     apps.open-cluster-management.io/git-path: tekton/overlays/classic
     apps.open-cluster-management.io/reconcile-option: merge
 ***REMOVED***
     app: demo-tekton-build-env
-    app.kubernetes.io/part-of: demo-tekton-build-env
-    apps.open-cluster-management.io/reconcile-rate: high
   name: demo-tekton-build-env-subscription-1
 ***REMOVED***
 spec:
-  channel: ggithubcom-mcombi-my-quarkus-quick-start-conf-ns/ggithubcom-mcombi-my-quarkus-quick-start-conf
+  channel: ggithubcom-mcombi-my-quarkus-quick-start-config-ns/ggithubcom-mcombi-my-quarkus-quick-start-config
   placement:
     placementRef:
       kind: PlacementRule
       name: demo-tekton-build-env-placement-1
-  secondaryChannel: ''
 ---
 apiVersion: apps.open-cluster-management.io/v1
 kind: PlacementRule
 ***REMOVED***
-***REMOVED*** {}
 ***REMOVED***
     app: demo-tekton-build-env
   name: demo-tekton-build-env-placement-1
@@ -50,4 +59,4 @@ kind: PlacementRule
 spec:
   clusterSelector:
     matchLabels:
-      local-cluster: 'true'
+      'local-cluster': 'true'
