--- a/quick-start-app-helm/quick-start-app/templates/serviceaccount.yaml
+++ b/quick-start-app-helm/quick-start-app/templates/serviceaccount.yaml
@@ -1,12 +1,12 @@
 {{- if .Values.serviceAccount.create -}}
-***REMOVED***
+apiVersion: v1
 kind: ServiceAccount
-***REMOVED***
+metadata:
   name: {{ include "quick-start-app.serviceAccountName" . }}
-***REMOVED***
+  labels:
     {{- include "quick-start-app.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
-***REMOVED***
+  annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 {{- end }}
