--- a/quick-start-app/base/service.yaml
+++ b/quick-start-app/base/service.yaml
@@ -1,10 +1,10 @@
-***REMOVED***
+apiVersion: v1
 kind: Service
-***REMOVED***
+metadata:
   name: quick-start-service
-***REMOVED***
+  labels:
     app: quick-start
-***REMOVED***
+  annotations:
     cloud.google.com/load-balancer-type: "Internal"
 spec:
   ports:
