--- a/tekton/base/triggers/github-secret.yaml
+++ b/tekton/base/triggers/github-secret.yaml
@@ -1,8 +1,8 @@
-***REMOVED***
-***REMOVED***
-***REMOVED***
+apiVersion: v1
+kind: Secret
+metadata:
   name: github-secret
-***REMOVED***
+  annotations:
     argocd.argoproj.io/sync-wave: "4"
 type: Opaque
 stringData:
