--- a/tekton/overlays/classic/github-secret.yaml
+++ b/tekton/overlays/classic/github-secret.yaml
@@ -1,13 +1,13 @@
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED*** Z2hwX1RXeG1JbnRLZnBSeEl2QmNlRzZnS3VmbXlvc3NqeDE3OERVWg==
-***REMOVED***
-***REMOVED***
+kind: Secret
+apiVersion: v1
+metadata:
+  name: basic-user-pass
+  namespace: demo-tekton-build-env
+  labels:
+    argocd.argoproj.io/secret-type: repository
+  annotations:
+    tekton.dev/git-0: 'https://github.com'
+data:
+  password:
+  username: bWNvbWJp
+type: kubernetes.io/basic-auth
