--- a/tekton/overlays/sealed-secrets/github-secret-ss.yaml
+++ b/tekton/overlays/sealed-secrets/github-secret-ss.yaml
@@ -1,15 +1,15 @@
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
+kind: Secret
+apiVersion: v1
+metadata:
+  name: basic-user-pass
+  namespace: demo-tekton-build-env
+  labels:
+    argocd.argoproj.io/secret-type: repository
+  annotations:
     sealedsecrets.bitnami.com/managed: "true"
     sealedsecrets.bitnami.com/namespace-wide: "true"
-***REMOVED***
-***REMOVED***
-***REMOVED*** CHANGEME
+    tekton.dev/git-0: 'https://github.com'
+data:
+  password: CHANGEME
   username: CHANGEME
-***REMOVED***
+type: kubernetes.io/basic-auth
