--- a/acm/tekton-sealed-secret-acm.yaml
+++ b/acm/tekton-sealed-secret-acm.yaml
@@ -1,10 +1,10 @@
 apiVersion: app.k8s.io/v1beta1
 kind: Application
-***REMOVED***
-***REMOVED***
+metadata:
+  annotations:
     apps.open-cluster-management.io/deployables: ''
   name: demo-tekton-build-env
-***REMOVED***
+  namespace: demo-tekton-build-env
 spec:
   componentKinds:
     - group: apps.open-cluster-management.io
@@ -19,18 +19,18 @@ spec:
 ---
 apiVersion: apps.open-cluster-management.io/v1
 kind: Subscription
-***REMOVED***
-***REMOVED***
+metadata:
+  annotations:
     apps.open-cluster-management.io/deployables: 'demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-my-gp2-immediate-storageclass,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-quick-start-pipeline-promote-pipeline,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-git-update-deployment-test-task,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-git-promote-deployment-task,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-github-secret-secret,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-source-pvc-persistentvolumeclaim,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-github-service-account-serviceaccount,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-quick-start-pipeline-test-pipeline,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-quick-start-eventlistener,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-quick-start-triggerbinding,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-el-quick-start-route,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-quick-start-triggertemplate,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-quay-credentials-secret,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-basic-user-pass-secret,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-s2i-java-11-custom-task,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-git-update-deployment-task,demo-tekton-build-env/demo-tekton-build-env-subscription-1-tekton-base-quick-start-trigger-trigger'
     apps.open-cluster-management.io/git-branch: develop-git-credentials
     apps.open-cluster-management.io/git-path: tekton/overlays/sealed-secrets
     apps.open-cluster-management.io/reconcile-option: merge
-***REMOVED***
+  labels:
     app: demo-tekton-build-env
     app.kubernetes.io/part-of: demo-tekton-build-env
     apps.open-cluster-management.io/reconcile-rate: high
   name: demo-tekton-build-env-subscription-1
-***REMOVED***
+  namespace: demo-tekton-build-env
 spec:
   channel: ggithubcom-mcombi-my-quarkus-quick-start-conf-ns/ggithubcom-mcombi-my-quarkus-quick-start-conf
   placement:
@@ -41,12 +41,12 @@ spec:
 ---
 apiVersion: apps.open-cluster-management.io/v1
 kind: PlacementRule
-***REMOVED***
-***REMOVED*** {}
-***REMOVED***
+metadata:
+  annotations: {}
+  labels:
     app: demo-tekton-build-env
   name: demo-tekton-build-env-placement-1
-***REMOVED***
+  namespace: demo-tekton-build-env
 spec:
   clusterSelector:
     matchLabels:
