--- a/quick-start-app-helm/quick-start-app/templates/route.yaml
+++ b/quick-start-app-helm/quick-start-app/templates/route.yaml
@@ -1,8 +1,8 @@
 apiVersion: route.openshift.io/v1
 kind: Route
-***REMOVED***
+metadata:
   name: quick-start-route
-***REMOVED***
+  labels:
    {{- include "quick-start-app.labels" . | nindent 4 }}
     app: quick-start
     app.kubernetes.io/instance: quick-start
