--- a/quick-start-app-helm/quick-start-app/values.yaml
+++ b/quick-start-app-helm/quick-start-app/values.yaml
@@ -18,7 +18,7 @@ serviceAccount:
   # Specifies whether a service account should be created
   create: true
   # Annotations to add to the service account
-***REMOVED*** {}
+  annotations: {}
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
   name: ""
@@ -44,7 +44,7 @@ service:
 ingress:
   enabled: false
   className: ""
-***REMOVED*** {}
+  annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
