--- a/quick-start-app/base/cm.yaml
+++ b/quick-start-app/base/cm.yaml
@@ -1,8 +1,8 @@
-***REMOVED***
+apiVersion: v1
 kind: ConfigMap
-***REMOVED***
+metadata:
   name: customer
-***REMOVED***
+data:
   qs.customer.name: Matteo
 
 
