--- a/quick-start-app/base/quick-start.yaml
+++ b/quick-start-app/base/quick-start.yaml
@@ -1,8 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
-***REMOVED***
+metadata:
   name: quick-start
-***REMOVED***
+  labels:
     app.openshift.io/runtime: quarkus
     app: quick-start
     app-with-metrics: quick-start
@@ -13,8 +13,8 @@ spec:
     matchLabels:
       app: quick-start
   template:
-    ***REMOVED***
-    ***REMOVED***
+    metadata:
+      labels:
         app: quick-start
         version: v1
     spec:
