--- a/quick-start-app/base/route.yaml
+++ b/quick-start-app/base/route.yaml
@@ -1,8 +1,8 @@
 apiVersion: route.openshift.io/v1
 kind: Route
-***REMOVED***
+metadata:
   name: quick-start-route
-***REMOVED***
+  labels:
     app: quick-start
     app.kubernetes.io/instance: quick-start
 spec:
