--- a/tekton/base/build-service-account.yaml
+++ b/tekton/base/build-service-account.yaml
@@ -1,8 +1,8 @@
-***REMOVED***
+apiVersion: v1
 kind: ServiceAccount
-***REMOVED***
+metadata:
   name: build-service-account
-***REMOVED***
+  annotations:
     argocd.argoproj.io/sync-wave: "1"
 secrets:
   - name: quay-credentials
