--- a/tekton/base/github-service-account.yaml
+++ b/tekton/base/github-service-account.yaml
@@ -1,8 +1,8 @@
-***REMOVED***
+apiVersion: v1
 kind: ServiceAccount
-***REMOVED***
+metadata:
   name: github-service-account
-***REMOVED***
+  annotations:
     argocd.argoproj.io/sync-wave: "1"
 secrets:
   - name: basic-user-pass
