--- a/tekton/base/pvc.yaml
+++ b/tekton/base/pvc.yaml
@@ -1,8 +1,8 @@
-***REMOVED***
+apiVersion: v1
 kind: PersistentVolumeClaim
-***REMOVED***
+metadata:
   name: source-pvc
-***REMOVED***
+  annotations:
     argocd.argoproj.io/sync-wave: "1"
 spec:
   accessModes:
