--- a/tekton/base/triggers/event-listener.yaml
+++ b/tekton/base/triggers/event-listener.yaml
@@ -1,8 +1,8 @@
 apiVersion: triggers.tekton.dev/v1beta1
 kind: EventListener
-***REMOVED***
+metadata:
   name: quick-start
-***REMOVED***
+  annotations:
     argocd.argoproj.io/sync-wave: "4"
 spec:
   serviceAccountName: pipeline
