--- a/tekton/base/triggers/trigger.yaml
+++ b/tekton/base/triggers/trigger.yaml
@@ -1,8 +1,8 @@
 apiVersion: triggers.tekton.dev/v1beta1
 kind: Trigger
-***REMOVED***
+metadata:
   name: quick-start-trigger
-***REMOVED***
+  annotations:
     argocd.argoproj.io/sync-wave: "4"
 spec:
   serviceAccountName: pipeline
