--- a/tekton/base/quay-secret.yaml
+++ b/tekton/base/quay-secret.yaml
@@ -2,7 +2,7 @@ kind: Secret
 apiVersion: v1
 metadata:
   name: quay-credentials
-  namespace: demo-tekton-build-env
+ # namespace: demo-tekton-build-env
   annotations:
     tekton.dev/docker-0: 'http://quay.io/'
     argocd.argoproj.io/sync-wave: "0"
