--- a/tekton/overlays/sealed-secrets/github-secret-ss.yaml
+++ b/tekton/overlays/sealed-secrets/github-secret-ss.yaml
@@ -2,7 +2,7 @@ kind: Secret
 apiVersion: v1
 metadata:
   name: basic-user-pass
-  namespace: demo-tekton-build-env
+#  namespace: demo-tekton-build-env
   labels:
     argocd.argoproj.io/secret-type: repository
   annotations:
