--- a/tekton/base/promote-task.yaml
+++ b/tekton/base/promote-task.yaml
@@ -6,7 +6,7 @@ metadata:
     tekton.dev/tags: git
     argocd.argoproj.io/sync-wave: "3"
   name: git-promote-deployment
-  namespace: demo-tekton-build-env
+ # namespace: demo-tekton-build-env
   labels:
     app.kubernetes.io/version: '0.1'
     operator.tekton.dev/provider-type: community
