--- a/tekton/base/update-config-version-task-test.yaml
+++ b/tekton/base/update-config-version-task-test.yaml
@@ -6,7 +6,7 @@ metadata:
     tekton.dev/tags: git
     argocd.argoproj.io/sync-wave: "3"
   name: git-update-deployment-test
-  namespace: demo-tekton-build-env
+#  namespace: demo-tekton-build-env
   labels:
     app.kubernetes.io/version: '0.1'
     operator.tekton.dev/provider-type: community
