--- a/tekton/overlays/sealed-secrets/kustomization.yaml
+++ b/tekton/overlays/sealed-secrets/kustomization.yaml
@@ -1,9 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: demo-tekton-build-env
+# namespace: demo-tekton-build-env
 bases:
   - ../../base/
-patchesStrategicMerge:
+resources:
   - github-secret-sealed.yaml
 
 
