--- a/tekton/base/s2i-task.yaml
+++ b/tekton/base/s2i-task.yaml
@@ -85,8 +85,8 @@ spec:
         - 'image-registry.openshift-image-registry.svc:5000/openshift/java:11'
         - '--image-scripts-url'
         - 'image:///usr/local/s2i'
-        - '--as-dockerfile'
-        - /gen-source/Dockerfile.gen
+#        - '--as-dockerfile'
+#        - /gen-source/Dockerfile.gen
         - '--environment-file'
         - /env-params/env-file
       image: >-
